--- a/chatbot-app/package.json
+++ b/chatbot-app/package.json
@@ -3,12 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest",
-    "web": "webpack serve --config webpack.config.js"
+    "start": "webpack serve --config webpack.config.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.0.0",
@@ -33,27 +28,16 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.76.6",
-    "@react-native/eslint-config": "0.76.6",
-    "@react-native/metro-config": "0.76.6",
-    "@react-native/typescript-config": "0.76.6",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
     "babel-loader": "^9.2.1",
-    "eslint": "^8.19.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
-    "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "ts-loader": "^9.5.2",
-    "typescript": "^5.8.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
