--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,15 @@ services:
     build: ./chatbot-service  # Path to the FastAPI Dockerfile
     container_name: chatbot-service
     restart: always
+    env_file:
+      - ./config/.env  # Load shared env file
     depends_on:
       - ollama  # Ensure Ollama is started before FastAPI
     ports:
       - "8000:8000"  # FastAPI service port
     volumes:
       - vector_db:/app/vector_db  # Persistent volume for vector_db
+      - pdf_storage:/app/pdf_storage  # PDF storage volume
     networks:
       - ollama_network  # Ensure both services are on the same network
 
@@ -32,14 +35,12 @@ services:
     build: ./chatbot-app  # Path to the React Native Dockerfile
     container_name: chatbot-app
     restart: always
+    env_file:
+      - ./config/.env  # Load shared env file
     depends_on:
       - chatbot-service  # Ensure FastAPI service starts before frontend
     ports:
-      - "8080:8080"  # Metro Bundler
-      - "19000-19006:19000-19006"  # Expo development ports
-    volumes:
-      - ./chatbot-app:/app  # Mount local code for hot reloading
-      - /app/node_modules  # Ensure node_modules are handled inside the container
+      - "8080:8080"
     networks:
       - ollama_network  # Ensure all services communicate properly
 
@@ -50,3 +51,4 @@ networks:
 volumes:
   ollama_data:  # Named volume for Ollama's data
   vector_db:  # Named volume for vector database
+  pdf_storage: # Named volume for storing PDF
