--- a/agent_client/Dockerfile
+++ b/agent_client/Dockerfile
@@ -12,5 +12,12 @@ COPY ./ .
 # Configure Poetry to not create virtual environments
 RUN poetry install
 
+# Remove the unnecessary files to reduce image size
+RUN find . -type d -name "__pycache__" -exec rm -rf {} + \
+    && find . -type f -name "*.pyc" -delete \
+    && find . -type f -name "*.pyo" -delete \
+    && find . -type f -name "*.pyd" -delete 
+RUN rm -rf Dockerfile
+
 # Default command
 CMD ["poetry", "run", "agent-client"]
