--- a/agent_server/Dockerfile
+++ b/agent_server/Dockerfile
@@ -15,5 +15,12 @@ RUN poetry install
 # Expose port
 EXPOSE 8080
 
+# Remove the unnecessary files to reduce image size
+RUN find . -type d -name "__pycache__" -exec rm -rf {} + \
+    && find . -type f -name "*.pyc" -delete \
+    && find . -type f -name "*.pyo" -delete \
+    && find . -type f -name "*.pyd" -delete 
+RUN rm -rf Dockerfile
+
 # Default command
 CMD ["poetry", "run", "agent-server"]
